docs: improve README with navigation links, quick start guide, and migrate deployment docs to website